--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,9 @@
 
 export(des1_2_1)
 export(des1_3_1)
+export(des_sis1)
 export(des_ssq1)
 useDynLib(desr,des1_2_1_C)
 useDynLib(desr,des1_3_1_C)
+useDynLib(desr,des_sis1_C)
 useDynLib(desr,des_ssq1_C)
