--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ export(des_1_2_1)
 export(des_1_3_1)
 export(des_2_1_1)
 export(des_2_1_2)
+export(des_2_2_1)
+export(des_2_2_2)
 export(des_gcd)
 export(des_sieve)
 export(des_sis1)
@@ -14,6 +16,8 @@ useDynLib(desr,des_1_2_1_C)
 useDynLib(desr,des_1_3_1_C)
 useDynLib(desr,des_2_1_1_C)
 useDynLib(desr,des_2_1_2_C)
+useDynLib(desr,des_2_2_1_C)
+useDynLib(desr,des_2_2_2_C)
 useDynLib(desr,des_sis1_C)
 useDynLib(desr,des_ssq1_C)
 useDynLib(desr,gcd_C)
