check external ptr for prng works

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,8 @@ export(des_gcd)
 export(des_sieve)
 export(des_sis1)
 export(des_ssq1)
+export(make_lrng)
+export(random_lrng)
 useDynLib(desr,approx_factor_C)
 useDynLib(desr,des_1_2_1_C)
 useDynLib(desr,des_1_3_1_C)
@@ -21,4 +23,6 @@ useDynLib(desr,des_2_2_2_C)
 useDynLib(desr,des_sis1_C)
 useDynLib(desr,des_ssq1_C)
 useDynLib(desr,gcd_C)
+useDynLib(desr,make_lrng_C)
+useDynLib(desr,random_lrng_C)
 useDynLib(desr,sieve_C)
