--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(des_2_1_1)
 export(des_2_1_2)
 export(des_2_2_1)
 export(des_2_2_2)
+export(des_2_5_1)
 export(des_gcd)
 export(des_sieve)
 export(des_sis1)
@@ -20,6 +21,7 @@ useDynLib(desr,des_2_1_1_C)
 useDynLib(desr,des_2_1_2_C)
 useDynLib(desr,des_2_2_1_C)
 useDynLib(desr,des_2_2_2_C)
+useDynLib(desr,des_2_5_1_C)
 useDynLib(desr,des_sis1_C)
 useDynLib(desr,des_ssq1_C)
 useDynLib(desr,gcd_C)
