fundamental period finders

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,8 @@ export(des_2_1_2)
 export(des_2_2_1)
 export(des_2_2_2)
 export(des_2_5_1)
+export(des_2_5_2)
+export(des_2_5_3)
 export(des_gcd)
 export(des_sieve)
 export(des_sis1)
@@ -22,6 +24,8 @@ useDynLib(desr,des_2_1_2_C)
 useDynLib(desr,des_2_2_1_C)
 useDynLib(desr,des_2_2_2_C)
 useDynLib(desr,des_2_5_1_C)
+useDynLib(desr,des_2_5_2_C)
+useDynLib(desr,des_2_5_3_C)
 useDynLib(desr,des_sis1_C)
 useDynLib(desr,des_ssq1_C)
 useDynLib(desr,gcd_C)
