--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(des_2_2_2)
 export(des_2_5_1)
 export(des_2_5_2)
 export(des_2_5_3)
+export(des_4_1_1)
 export(des_gcd)
 export(des_sieve)
 export(des_sis1)
@@ -26,6 +27,7 @@ useDynLib(desr,des_2_2_2_C)
 useDynLib(desr,des_2_5_1_C)
 useDynLib(desr,des_2_5_2_C)
 useDynLib(desr,des_2_5_3_C)
+useDynLib(desr,des_4_1_1_C)
 useDynLib(desr,des_sis1_C)
 useDynLib(desr,des_ssq1_C)
 useDynLib(desr,gcd_C)
